--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "symfony/symfony": "2.8"
+        "symfony/symfony": "2.8",
+        "symfony/finder": "^3.3"
     }
 }
