--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "symfony/symfony": "2.8",
-        "symfony/finder": "^3.3"
+        "symfony/finder": "^3.3",
+        "symfony/yaml": "^3.3"
     }
 }
