--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "symfony/symfony": "2.8",
         "symfony/finder": "^3.3",
-        "symfony/yaml": "^3.3"
+        "symfony/yaml": "^3.3",
+        "symfony/stopwatch": "^3.3"
     }
 }
